--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+up.time
 commit.time
 commit.default
 target.mk
@@ -26,3 +27,16 @@ dotdir/
 clonedir/
 
 *.makestuff
+
+.texdeps/
+Pearson
+jdpix
+talkdir
+txt.format
+
+*.draft.nav
+*.draft.pdf
+*.draft.snm
+*.draft.tex
+*.draft.toc
+#
